document with graph

--- a/template/{% if use_latex %}paper{% endif %}/document.tex
+++ b/template/{% if use_latex %}paper{% endif %}/document.tex
@@ -2,7 +2,7 @@
 \usepackage{natbib}      % For citation management
 \usepackage{listings}
 \usepackage{xcolor}
-%\usepackage{graphicx}
+\usepackage{graphicx}
 %\usepackage{amsmath}
 
 % Define custom colors for better contrast
@@ -69,6 +69,13 @@ def sum_of_squares(n):
 result = sum_of_squares(10)
 print(f"The sum of squares of first 10 numbers is: {result}")
 \end{lstlisting}
+
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth]{graph.png} % Adjust width as needed
+    \caption{This is an example image}
+    \label{fig:example}
+\end{figure}
 
 \bibliography{references}
 \bibliographystyle{plainnat}
